# Ceres

./: CMakeCache.txt  CMakeLists.txt
config/: ConfigurationFile.cfg
mathematica_src/: FindW.nb
matlab_src/: GetSpectralPowerDensityMultiple.m  GetSpectralPowerDensityMultipleFreeDir.m  PowerLawMeshListTest.m  PowerLawMeshTest.m
matlab_support_code/: FillConfigTemplate.m  GeneratePowerLawMesh.m  GeneratePowerLawMesh2.m
src/: ceres.cc
support_code/: config_in.h
